# zephyrgc

./: CMakeLists.txt  FullTradeStudy.docx  GNCModel.mdl  README.md  Resources.txt  WHS.doc  ZEPH4-GNC-TS-01.docx  ZEPHYR12-GNC-DES-01.docx  ZEPHYR12-GNC-ICD-01.docx  autopilot.cpp  autopilot.h  blimp.txt  soph slides Presentation 1.0.pptx  speech  speech~  zephyrgc.pro
Architecture modelling/: SysML4Modelica-Profile.xmi
TestOfCCSMatlabIntegration/: Main.mdl  Test.prj
TestOfCCSMatlabIntegration/.SimulinkProject/: Project.xml  ProjectData.type.Info.xml
TestOfCCSMatlabIntegration/.SimulinkProject/Root.type.Categories/: FileClassCategory.type.Category.xml  ReviewCategory.type.Category.xml
TestOfCCSMatlabIntegration/.SimulinkProject/Root.type.Categories/FileClassCategory.type.Category/: artifact.type.Label.xml  convenience.type.Label.xml  derived.type.Label.xml  design.type.Label.xml  none.type.Label.xml  other.type.Label.xml
TestOfCCSMatlabIntegration/.SimulinkProject/Root.type.Categories/ReviewCategory.type.Category/: approved.type.Label.xml  needMoreInfo.type.Label.xml  rejected.type.Label.xml  toReview.type.Label.xml
TestOfCCSMatlabIntegration/Main_ert_rtw/: Main.cpp  Main.h  Main_private.h  Main_types.h  build_exception.mat  codeInfo.mat  ert_main.cpp  modelsources.txt  rtwtypes.h  rtwtypeschksum.mat
TestOfCCSMatlabIntegration/slprj/: sl_proj.tmw
TestOfCCSMatlabIntegration/slprj/ert/Main/tmwinternal/: minfo.mat
TestOfCCSMatlabIntegration/slprj/ert/_sharedutils/: tflSUInfo.mat
cmake/: Toolchain-Beaglebone.cmake
src/: zephyrgc.cpp  zephyrgc.h
